[Admin] Fix something when wrong

--- a/Capstone-Project-EIP/CapstoneProjectClient/CapstoneProjectClient/Views/Login/Index.cshtml
+++ b/Capstone-Project-EIP/CapstoneProjectClient/CapstoneProjectClient/Views/Login/Index.cshtml
@@ -59,8 +59,8 @@
                     <div class="message-error">
                         <h6>Code không đúng, vui lòng nhập lại</h6>
                     </div>
-                    <div class="wrap-input100 validate-input m-b-10" data-validate="Vui Lòng Nhập Mã Tham Gia">
-                        <input value="" class="input100" id="txt-code-login" type="text" name="pass" placeholder="Vui Lòng Nhập Mã Tham Gia">
+                    <div class="wrap-input100 validate-input m-b-10" data-validate="Vui Lòng Nhập Mã Tham Gia Là 999777">
+                        <input value="" class="input100" id="txt-code-login" type="text" name="pass" placeholder="Vui Lòng Nhập Mã Tham Gia Là 999777">
                     </div>
                     <div class="container-login100-form-btn p-t-10 ">
                         <button class="login100-form-btn login-form-container" id="btn-check-code">
