--- a/Capstone-Project-EIP/CapstoneProjectClient/CapstoneProjectClient/Views/Session/Index.cshtml
+++ b/Capstone-Project-EIP/CapstoneProjectClient/CapstoneProjectClient/Views/Session/Index.cshtml
@@ -46,7 +46,7 @@
                                         <a href="/QA/Index/@session.EventId/@session.SessionID" class="login100-form-btn custom-button" id="btn-session" style="height:100%; padding-top:20px; padding-bottom:20px;">
                                             @session.Name
                                             <br />
-                                            @(session.Address) @*- @(session.StartTime.Value.ToString("hh:mm"))*@
+                                            @*@(session.Address)*@ @*- @(session.StartTime.Value.ToString("hh:mm"))*@
                                         </a>
 
                                     </div>
@@ -66,7 +66,7 @@
                                     <a href="/QA/Index/@session.EventId/@session.SessionID" class="login100-form-btn custom-button" id="btn-session" style="height:100%; padding-top:20px; padding-bottom:20px;">
                                         @session.Name
                                         <br />
-                                        @(session.Address) @*- @(session.StartTime.Value.ToString("hh:mm"))*@
+                                        @*@(session.Address)*@ @*- @(session.StartTime.Value.ToString("hh:mm"))*@
                                     </a>
                                 </div>
                             }
