--- a/Capstone-Project-EIP/CapstoneProjectClient/CapstoneProjectClient/Views/Shared/_Layout.cshtml
+++ b/Capstone-Project-EIP/CapstoneProjectClient/CapstoneProjectClient/Views/Shared/_Layout.cshtml
@@ -46,12 +46,6 @@
     <link rel="stylesheet" href="~/Content/CustomCss/file.css">
 
 
-
-
-
-
-
-
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
 
@@ -62,12 +56,12 @@
         <div class="side-navbar-wrapper">
             <div class="sidenav-header sidenav-header-custom d-flex align-items-center justify-content-center">
                 <div class="sidenav-header-inner text-center">
-                    <img src="~/Content/img/LogoMakr_6CVPn5.png" alt="person" class="img-fluid rounded-circle">
+                    <img src="~/Content/img/LogoVDEforum.png" alt="person"class="img-fluid" style="width:100%; height:auto">
                     @*<h2 class="h5 text-uppercase">Anderson Hardy</h2><span class="text-uppercase">Web Developer</span>*@
                 </div>
                 <div class="sidenav-header-logo">
                     <a class="brand-small text-center" style="font-family: Montserrat-Regular">
-                        <img src="~/Content/img/LogoMakr_6CVPn5.png" />
+                        <img src="~/Content/img/LogoVDEforum.png" />
                     </a>
                 </div>
             </div>
